# py-allspice

./: .gitattributes  .gitignore  CHANGELOG.md  README.md  __init__.py  attributes_mapping.json  flake.nix  justfile  pyproject.toml  pyrightconfig.json  requirements-test.txt  requirements.txt  setup.py  test-gitea.sh
.github/: CODEOWNERS
.github/workflows/: deploy.yml  docs.yml  notification.yml  test-gitea.yml  test.yml
allspice/: __init__.py  allspice.py  apiobject.py  baseapiobject.py  exceptions.py  ratelimiter.py
allspice/utils/: bom_generation.py  core.py  list_components.py  netlist_generation.py  retry_generated.py
alt/: README.md  swagger3.json  swagger_config.json
alt/all-spice-api-client/: pyproject.toml
alt/openapi_generator/: .gitlab-ci.yml  .travis.yml  README.md  setup.py  test-requirements.txt  tox.ini
alt/swagger2/: README.md  setup.py
alt/swagger3/: README.md  setup.py
examples/: README.md
examples/backup_repo/: README.md  backup_repo.ipynb  backup_repo.py
examples/basics/: basics.ipynb
examples/check_parts_in_schematics/: README.md  check_parts_in_schematics.py
examples/clone_all_repos_by_tag/: README.md
examples/generate_bom/: README.md  attributes_mapping.json  compute_cogs.py  generate_bom.py
examples/generate_netlist/: generate_netlist.py
examples/team_management/: manage_teams.ipynb
scripts/: generate_attribute_types.py  report_coverage.py  typecheck.sh
tests/: conftest.py  csv_snapshot_extension.py  test_api.py  test_api_longtests.py  test_api_ratelimiting.py  test_ratelimiter.py  test_retry.py  test_utils.py
(+3121 files in other folders)
