[project]
name = "py-allspice-workspace"
version = "0.0.0"
requires-python = ">=3.10"

[dependency-groups]
dev = [
    "coverage~=7.13",
    "diff_cover~=10.2",
    "pdoc~=16.0",
    "pyright~=1.1",
    "pytest-recording~=0.13",
    "pytest~=8.4",
    "ruff==0.15.12",
    "syrupy~=4.9",
    "types-requests~=2.33",
    "typing_extensions~=4.15; python_version < '3.11'",
]

[tool.uv.workspace]
members = ["packages/*"]

[tool.ruff]
src = ["packages/*"]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "RUF"]
ignore = [
  "E501", # Line length.
  "F405", # Unknown identifier usage due to import *.
]

[tool.ruff.lint.isort]
known-first-party = ["allspice"]

[tool.pytest.ini_options]
testpaths = ["packages/*/tests"]

[tool.coverage.report]
omit = [
  "packages/*/tests/*",
]
